# usr_bin_sysadmin

./: Cargo.toml  README.md
design/: rust.md  spec.md  test_plan.md  test_plan_improvements.md  test_unit_parser.md  todo.md
examples/: basic.sysadmin  database-migration.sysadmin  demo.sysadmin
src/: cli.rs  lib.rs  main.rs
src/executor/: interactive.rs  mod.rs
src/model/: block.rs  document.rs  mod.rs
src/parser/: mod.rs  sysadmin.rs  tests.rs  tests_error_handling.rs
src/ui/: mod.rs  renderer.rs  tests.rs  tui.rs
tests/: cross_platform_tests.rs  executor_integration_tests.rs  integration_tests.rs  stress_tests.rs
