[package]
name = "usr_bin_sysadmin"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A shell for sysadmins - executable operational documentation"
license = "MIT OR Apache-2.0"

[[bin]]
name = "sysadmin"
path = "src/main.rs"

[dependencies]
# Markdown parsing
pulldown-cmark = "0.11"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Terminal UI
crossterm = "0.28"
ratatui = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization (for future features)
serde = { version = "1.0", features = ["derive"] }
emojis = "0.8.0"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
criterion = "0.5"
